# faster-whisper-rs

./: Cargo.toml  README.md
src/: config.rs  lib.rs  pyscripts.rs
